# opengl-studies

./: .gitignore  notes.md
01-basic/: CMakeLists.txt  Makefile  notes.md
01-basic/3rd/glad/: glad.c
01-basic/src/: hello-triangle.cpp  main.cpp
02-quads/: CMakeLists.txt
02-quads/inc/: geometry.hpp  shader.hpp  shader_prog.hpp
02-quads/src/: geometry.cpp  main.cpp  shader.cpp  shader_prog.cpp
02-quads/src/shaders/: fragment.shader  vertex.shader
03-texquad/: CMakeLists.txt
03-texquad/inc/: geometry.hpp
03-texquad/inc/glad/: glad.h
03-texquad/src/: geometry.cpp  main.cpp  shader_prog.cpp
03-texquad/src/shaders/: fragment.shader  vertex.shader
04-orthographic/: 3rd  CMakeLists.txt  compile_flags.txt  inc
04-orthographic/src/: main.cpp  shader_prog.cpp
04-orthographic/src/shaders/: fragment.shader  vertex.shader
